--- a/PhuAgain2/package.json
+++ b/PhuAgain2/package.json
@@ -4,9 +4,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "method": "^2.0.0",
+    "method-override": "^3.0.0",
     "mongoose": "^5.12.10",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "slugify": "^1.5.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
